--- a/Anket/MainWindow.xaml
+++ b/Anket/MainWindow.xaml
@@ -5,29 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Anket"
         mc:Ignorable="d"
-        Title="MainWindow" Height="480" Width="410">
+        Title="MainWindow" Height="480" Width="410" 
+        >
     <Grid Height="450" Width="400">
-        <TextBox x:Name="txtBoxLoad" Height="30" Width="200" Margin="0,0,170,370">
+        <Grid.Background>
+            <LinearGradientBrush>
+                <GradientStop Color="Blue" ></GradientStop>
+                <GradientStop Color="Red" Offset="1" ></GradientStop>
+            </LinearGradientBrush>
+        </Grid.Background>
+
+        <TextBox x:Name="txtBoxLoad" Height="30" Width="200" Margin="0,0,170,370" PlaceholderText="First Name">
             
         </TextBox>
         <Button  Height="30" Width="100" Margin="200,0,0,370" Click="btnLoad_Click">Load</Button>
         <Label FontSize="15" Margin="15,77,276,342"  >Father's name</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxFatherName" Margin="129,85,71,345" ></TextBox>
+        <TextBox Text="{Binding FatherName,  UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxFatherName" Margin="129,85,71,345" ></TextBox>
         <Label FontSize="15" Margin="15,114,276,305"  >Name</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxName" Margin="129,121,71,309" ></TextBox>
+        <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxName" Margin="129,121,71,309" ></TextBox>
         <Label FontSize="15" Margin="15,148,276,271"  >Surname</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxSurname" Margin="129,154,71,276" ></TextBox>
+        <TextBox Text="{Binding Surname,  UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxSurname" Margin="129,154,71,276" ></TextBox>
         <Label FontSize="15" Margin="15,208,276,211"  >Country</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxCountry" Margin="129,214,71,216" ></TextBox>
+        <TextBox Text="{Binding Country,  UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxCountry" Margin="129,214,71,216" ></TextBox>
         <Label FontSize="15" Margin="15,239,276,180"  >City</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxCity" Margin="129,244,71,186" ></TextBox>
+        <TextBox Text="{Binding City,  UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxCity" Margin="129,244,71,186" ></TextBox>
         <Label FontSize="14" Margin="15,272,276,147"  >Phone Number</Label>
-        <TextBox Height="20" Width="200" x:Name="txtBoxPhone" Margin="129,276,71,154" ></TextBox>
+        <TextBox Text="{Binding Phone,  UpdateSourceTrigger=PropertyChanged}" Height="20" Width="200" x:Name="txtBoxPhone" Margin="129,276,71,154" ></TextBox>
         <Label FontSize="14" Margin="15,307,276,112"  >Brithday</Label>
         <Label FontSize="14" Margin="15,343,276,76"  >Gender</Label>
         <RadioButton x:Name="rbMale"  Margin="124,352,227,76" Checked="RadioButton_Checked">Male</RadioButton>
         <RadioButton x:Name="rbFemale" Margin="197,352,132,76"  Checked="RadioButton_Checked">Female</RadioButton>
         <Button Margin="10,394,10,16" Background="Green" FontSize="22" Click="btnSave_Click">Save</Button>
-        <DatePicker Name="Calendar" Margin="130,308,100,114"></DatePicker>
+        <DatePicker Text="{Binding Brithday,  UpdateSourceTrigger=PropertyChanged}" Name="Calendar" Margin="130,308,100,114"></DatePicker>
     </Grid>
 </Window>
